# hexlet-my-first-workflow

./: README.md  makefile  pyproject.toml
.github/workflows/: second-workflow.yml
test/scripts/: say_hello.py
